# rust-actix-demo-rest-api-bearer-grants

./: .gitignore  Cargo.toml  LICENSE
migrations/2022-10-19-122159_create_users/: down.sql  up.sql
migrations/2022-10-20-012950_insert_demo_users/: down.sql  up.sql
scripts/: requests.sh
src/: config.rs  database.rs  errors.rs  main.rs  openapi.rs  routes.rs  schema.rs  server.rs
src/apps/: health.rs  mod.rs
src/apps/auth/: extractor.rs  handlers.rs  mod.rs  permissions.rs  roles.rs  routes.rs  validator.rs
src/apps/demo/: handlers.rs  mod.rs  routes.rs
src/apps/user/: handlers.rs  models.rs  routes.rs
src/jwt/: claims.rs
