
[package]
name = "demo-http-auth-role-permission-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7"
actix-web = { version = "4" }
actix-web-grants = "3"
actix-web-httpauth = "0.8"
chrono = "0.4"
derive_more = "0.99"
dotenvy = "0.15"
env_logger = "0.9"
envy = "0.4"
futures-util = "0.3"
futures-core = "0.3"
jsonwebtoken = "8"
lazy_static = "1.4"
listenfd = "1"
serde = {version = "1", features = ["derive"] }
serde_derive = "1.0"