
[package]
name = "demo-http-auth-role-permission-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-cors = "0.6"
actix-redis = "0.12"
actix-rt = "2.7"
actix-web = { version = "4" }
actix-web-grants = "3"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4.7", features = ["chrono", "postgres", "sqlite", "r2d2", "uuid"] }
dotenvy = "0.15"
env_logger = "0.9"
envy = "0.4"
futures-util = "0.3"
futures-core = "0.3"
jsonwebtoken = "8"
lazy_static = "1.4"
listenfd = "1"
redis-async = "0.13"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
serde = {version = "1", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
validator = "0.16.0"
validator_derive = "0.16.0"
utoipa = { version = "2", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }


[features]
postgres = []
sqlite = []
default = ["postgres"]
